--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: package_archive_info
-description: A new Flutter plugin.
+description: A get archive info for package of local file.
 version: 0.0.1
-author:
-homepage:
+author: Dylan
+homepage: https://github.com/wangbo4020/flutter_package_archive_info
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.20.0 <2.0.0"
+  sdk: ">=2.1.0 <3.0.0"
+  flutter: ">=1.12.13+hotfix.5 <2.0.0"
 
 dependencies:
   flutter:
