--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: package_archive_info
-description: Flutter plugin for querying information about the .apkpackage on Android,
+description: Flutter plugin for querying information about the .apk file on Android,
   such as versionCode.
 version: 0.0.2
 homepage: https://github.com/wangbo4020/flutter_package_archive_info
